# synthetic_demographics

./: .gitattributes  LICENSE  README.md  pyproject.toml
synthetic_demographics/: demographic_generator.py
synthetic_demographics/scripts/: postinstall.py
