[project]
name = "synthetic-demographics"
version = "0.1.0"
description = ""
authors = [
    {name = "Sacrificial Pancakes"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
postinstall = "synthetic_demographics.scripts.postinstall:main"